# airplay2

./: BUILD_FIX_SUMMARY.md  CMakeLists.txt  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md
.github/workflows/: build-simple.yml  build.yml
files/: airplay2-lite.config  airplay2-lite.init
scripts/: build.sh  configure.sh  install.sh  test-build.ps1  test-build.sh  test-cmake.ps1  verify-sdk-urls.ps1
src/: CMakeLists.txt  airplay_server.c  airplay_server.h  audio_output.c  audio_output.h  crypto_utils.c  crypto_utils.h  main.c  multiroom.c  multiroom.h  network_utils.c  network_utils.h  playback_control.c  playback_control.h  volume_control.c  volume_control.h
